--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "mongoose": "^4.10.8"
+    "body-parser": "^1.18.0",
+    "express": "^4.15.4",
+    "express-handlebars": "^3.0.0",
+    "method-override": "^2.3.9",
+    "mongoose": "^4.10.8",
+    "request": "^2.81.0"
   },
   "devDependencies": {},
   "repository": {
