--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.9",
     "mongoose": "^4.10.8",
-    "request": "^2.81.0"
+    "mysql2": "^1.4.2",
+    "request": "^2.81.0",
+    "sequelize": "^4.8.3"
   },
   "devDependencies": {},
   "repository": {
